# ArchitectureLabs

./: CMakeLists.txt  DataFillScript.sql  README.md  commands.sql  docker-compose.yml  get.lua  helper.h  index.yaml  other.yaml  start.sh  start_auth_api.sh
auth_service/: Dockerfile  auth_handler.h  auth_main.cpp  http_auth_request_factory.h  http_auth_server.h
cache_test/: get_cache.lua  get_no_cache.lua  res.txt  test_cache.sh
config/: config.cpp  config.h
database/: cache.cpp  cache.h  chat.cpp  chat.h  database.cpp  database.h  message.cpp  message.h  user.cpp  user.h  user_to_chat.cpp  user_to_chat.h
db_filler/: CMakeLists.txt  Dockerfile  basemod.py  chat.py  jush_hash.cpp  main.py  message.py  requirements.txt  user.py  user_to_chat.py
docs/: auth.yaml  messenger.yaml
kafka/: Dockerfile  main.cpp
messanger_api_service/: Dockerfile
messanger_api_service/web_server/: http_request_factory.h  http_web_server.h
messanger_api_service/web_server/clients/: auth_service_client.h
messanger_api_service/web_server/handlers/: chat_handler.h  message_handler.h
messenger_api_service/: Dockerfile  main.cpp
mysql/: Dockerfile
mysql/mysql.conf.d/: mysqld.cnf
proxysql/: Dockerfile  proxysql.cnf
